--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@libsql/client": "^0.14.0",
     "@node-rs/argon2": "^2.0.0",
     "@nuxt/fonts": "^0.10.2",
+    "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.19.2",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
