--- a/package.json
+++ b/package.json
@@ -39,7 +39,5 @@
     "typescript": "^5.6.3",
     "vue-tsc": "^2.1.10"
   },
-  "trustedDependencies": [
-    "@parcel/watcher"
-  ]
+  "packageManager": "pnpm@9.12.3"
 }
