--- a/package.json
+++ b/package.json
@@ -39,5 +39,7 @@
     "typescript": "^5.6.3",
     "vue-tsc": "^2.1.10"
   },
-  "packageManager": "pnpm@9.12.3"
+  "trustedDependencies": [
+    "@parcel/watcher"
+  ]
 }
